[package]
name = "kls"
version = "0.0.1"
edition = "2021"
description = "Reserved"
authors = ["kinire98"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
file-mode = "0.1.2"
