[package]
name = "kls"
version = "1.0.1"
edition = "2021"
description = "An ls clone written in Rust"
authors = ["kinire98"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
file-mode = "0.1.2"
nt-time = "0.6.5"
